--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ nav a {
     <button onclick="openChat()">Book Appointment</button>
   </div>
   <div class="hero-img">
-    <img src="C:\Users\b5359\OneDrive\Desktop\New folder (3)\1.png" alt="Dental Clinic">
+    <img src="1.png" alt="Dental Clinic">
   </div>
 </section>
 
@@ -265,4 +265,5 @@ function sendMessage() {
 </script>
 
 </body>
+
 </html>
